# hot_dog

./: Cargo.toml  Dockerfile  README.md  fly.toml  migration.sql  package-lock.json
assets/: tailwind.css
src/: main.rs  models.rs  notica_component.rs
src/backend/: kids.rs  mod.rs  turso.rs
src/components/: mod.rs
src/components/about/: component.rs
src/components/card/: style.css
src/components/kid_card/: component.rs
src/components/kid_history/: component.rs
src/components/settings/: component.rs
src/components/toast/: style.css
