[package]
name = "hot_dog"
version = "0.1.0"
authors = ["paulosuzart <paulosuzart@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.43", features = ["serde"] }
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
libsql = { version = "0.9.29", optional = true }
tokio = { version = "1.49.0", features = ["sync"], optional = true }
serde = "1.0.228"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:libsql", "dep:tokio"]
